# DocParser

./: pyproject.toml
src/docparser/: __init__.py  base_parser.py  docling.py  marker.py  types.py  utils.py
tests/: test_docling.py  test_url.py
